in-page navigation links in nav menu at smaller sizes, content updates, general spacing fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -415,9 +415,12 @@ li p, .skillset {
 }
 
 #outer-wrap {
-    overflow: hidden;
     position: relative;
     width: 100%;
+}
+
+.js-nav #outer-wrap {
+    overflow: hidden;
 }
 
 #inner-wrap {
@@ -476,7 +479,8 @@ footer[role="contentinfo"] {
         float: left;
     }
 
-    .nav-btn {
+    .nav-btn,
+    #sections {
         display: none;
     }
 
@@ -515,11 +519,11 @@ footer[role="contentinfo"] {
         margin-bottom: 1.25em;
     }
 
-    #full-time,
-    #freelance,
-    #speaking,
-    #skills,
-    #education {
+    #full-time ul,
+    #freelance ul,
+    #speaking ul,
+    #skills > ul,
+    #education ul {
         float: left;
         width: 100%;
     }
@@ -544,7 +548,8 @@ footer[role="contentinfo"] {
     }
 
     .vevent p,
-    .skillset p {
+    .skillset p,
+    .skillset li ul {
         float: left;
         width: 77%;
     }
@@ -593,11 +598,11 @@ footer[role="contentinfo"] {
         display: block;
     }
 
-    #full-time,
-    #freelance,
-    #speaking,
-    #skills,
-    #education {
+    #full-time ul,
+    #freelance ul,
+    #speaking ul,
+    #skills > ul,
+    #education ul {
         width: 88%;
     }
 
@@ -663,7 +668,8 @@ footer[role="contentinfo"] {
     }
 
     #nav li a {
-        padding: 0.85714em 2.14286em;
+        padding: 0.5em;
+        color: #fff;
     }
 
     #nav #contact, #nav #contact a {
@@ -671,6 +677,7 @@ footer[role="contentinfo"] {
     }
 
     #nav #contact {
+        margin-bottom: 1.25em;
         padding: 0 0.5em;
     }
 
@@ -797,7 +804,7 @@ footer[role="contentinfo"] {
         padding: 0;
     }
     body {
-        font-size: .75em;
+        font-size: .65em;
     }
     #branding, #content {
         width: 71%;
@@ -807,7 +814,8 @@ footer[role="contentinfo"] {
         float: left;
     }
 
-    .nav-btn {
+    .nav-btn,
+    #sections {
         display: none;
     }
 
@@ -837,6 +845,11 @@ footer[role="contentinfo"] {
         padding: 0;
         position: absolute;
         width: 1px;
+    }
+
+    #nav address {
+        margin-top: 2em;
+        line-height: 1.5em;
     }
 
     #nav ul {
@@ -880,11 +893,11 @@ footer[role="contentinfo"] {
         display: block;
     }
 
-    #full-time,
-    #freelance,
-    #speaking,
-    #skills,
-    #education {
+    #full-time ul,
+    #freelance ul,
+    #speaking ul,
+    #skills > ul,
+    #education ul {
         float: left;
         width: 88%;
     }
@@ -909,7 +922,8 @@ footer[role="contentinfo"] {
     }
 
     .vevent p,
-    .skillset p {
+    .skillset p,
+    .skillset li ul {
         float: left;
         width: 77%;
     }
